--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/     LOGO        .png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Wonderland</title>
+    <title>Dixieland</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
