--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,21 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="dixieland-icon" href="%PUBLIC_URL%/dixieland-icon.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Dixieland</title>
+    <title>Dixieland | The Decentralized Reserve Currency on Songbird Network</title>
+    <meta content="Dixieland is building a community-owned decentralized financial infrastructure to bring more stability and transparency for the world. D.O.G.E" name="description">
+    <meta content="Dixieland" name="author">
+    <meta content="Dixieland | The Decentralized Reserve Currency on Songbird Network" property="og:title">
+    <meta content="Jazz is building a community-owned decentralized financial infrastructure to bring more stability and transparency for the world. D.O.G.E" property="og:description">
+    <meta content="%PUBLIC_URL%/banner.png" property="og:image">
+    <meta content="Dixieland| The Decentralized Reserve Currency on Songbird Network" property="twitter:title">
+    <meta content="Dixieland is building a community-owned decentralized financial infrastructure to bring more stability and transparency for the world. D.O.G.E" property="twitter:description">
+    <meta content="%PUBLIC_URL%/banner.png" property="twitter:image">
+    <meta property="og:type" content="website">
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@dixieland_fi" name="twitter:site">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
